--- a/CI/Jenkinsfile
+++ b/CI/Jenkinsfile
@@ -8,8 +8,8 @@ pipeline {
     environment {
         // Docker Hub credentials ID (configure in Jenkins -> Credentials)
         DOCKER_HUB_CREDENTIALS = 'dockerhub-credentials'
-        DOCKER_HUB_USER = 'your-dockerhub-username'
-        IMAGE_NAME = 'your-dockerhub-username/angular-app'
+        DOCKER_HUB_USER = 'ghandrisemh'
+        IMAGE_NAME = 'ghandrisemh/angular-devops'
         IMAGE_TAG = 'latest'
 
         // SonarQube installation name (configure in Jenkins -> Manage Jenkins -> Configure System)
@@ -19,22 +19,21 @@ pipeline {
     stages {
         stage('Checkout') {
             steps {
-                git branch: 'main',
-                    url: 'https://github.com/your-repo/angular-app.git'
+                git branch: 'master',
+                    url: 'https://github.com/TyreX6/angular-devops'
             }
         }
 
         stage('Install Dependencies') {
             steps {
-                sh 'npm install -g @angular/cli'
                 sh 'npm install'
             }
         }
 
         stage('Build & Test') {
             steps {
-                sh 'ng build --configuration production'
-                sh 'ng test --watch=false --browsers=ChromeHeadless || true'
+                sh 'npm run build-prod'
+                sh 'npm run test'
             }
         }
 
@@ -43,7 +42,7 @@ pipeline {
                 withSonarQubeEnv("${SONARQUBE_ENV}") {
                     sh """
                         ./node_modules/.bin/sonar-scanner \
-                          -Dsonar.projectKey=angular-app \
+                          -Dsonar.projectKey=angular-devops \
                           -Dsonar.sources=src \
                           -Dsonar.host.url=$SONAR_HOST_URL \
                           -Dsonar.login=$SONAR_AUTH_TOKEN
