--- a/CI/Jenkinsfile
+++ b/CI/Jenkinsfile
@@ -38,13 +38,14 @@ pipeline {
         stage('SonarQube Analysis') {
             steps {
                 withSonarQubeEnv("${SONARQUBE_ENV}") {
-                  sh '''
-                  npx sonar-scanner \
-                    -Dsonar.projectKey=angular-devops \
-                    -Dsonar.sources=src \
-                    -Dsonar.host.url=$SONAR_HOST_URL \
-                    -Dsonar.login=$SONAR_AUTH_TOKEN
-                '''
+                    sh 'chmod +x ./node_modules/.bin/sonar-scanner'
+                    sh """
+                        ./node_modules/.bin/sonar-scanner \
+                          -Dsonar.projectKey=angular-devops \
+                          -Dsonar.sources=src \
+                          -Dsonar.host.url=$SONAR_HOST_URL \
+                          -Dsonar.login=$SONAR_AUTH_TOKEN
+                    """
                 }
             }
         }
