--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "build-prod": "ng build --configuration production",
+    "sonar": "sonar-scanner",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
