--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "build-prod": "ng build --configuration production",
     "sonar": "sonar-scanner",
+    "sonar-npx": "npx sonar-scanner",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
