--- a/CI/Jenkinsfile
+++ b/CI/Jenkinsfile
@@ -35,35 +35,35 @@ pipeline {
             }
         }
 
-        stage('SonarQube analysis') {
-            environment {
-                scannerHome = tool 'SonarQube'   // Defined in Jenkins Global Tool Config
-            }
-            steps {
-                withSonarQubeEnv('SonarQube') {         // Defined in Jenkins "Configure System"
-                    sh """
-                        ${scannerHome}/bin/sonar-scanner \
-                          -Dsonar.projectKey=angular-devops \
-                          -Dsonar.projectName=angular-devops \
-                          -Dsonar.sources=src \
-                          -Dsonar.tests=src \
-                          -Dsonar.typescript.tsconfigPath=tsconfig.json \
-                          -Dsonar.exclusions=node_modules/** \
-                          -Dsonar.test.inclusions=**/*.spec.ts \
-                          -Dsonar.testExecutionReportPaths=test-reports/ut_report.xml
-                    """
-                }
-            }
-        }
 
-        stage('SonarQube Analysis') {
-            steps {
-                withSonarQubeEnv("${SONARQUBE_ENV}") {
-                  sh "chmod 777 /var/jenkins_home/workspace/angular-devops-ci/node_modules/sonar-scanner/bin/sonar-scanner"
-                  sh """
-                  npm run sonar -- -Dsonar.projectKey=angular-devops -Dsonar.host.url=http://localhost:9000 -Dsonar.login=${SONAR_AUTH_TOKEN}
-                        """
+        stage('SonarQube analysis') {
+            agent {
+                docker {
+                    image 'sonarsource/sonar-scanner-cli:latest'
+                    args '-u root --network=host'
+                    // -u root (run as root inside container if needed)
+                    // --network=host (so container can reach SonarQube on host machine)
                 }
+            }
+            environment {
+                SONAR_HOST_URL = 'http://sonarqube:9000'  // change if needed
+                SONAR_TOKEN    = credentials('sonarqube')  // Jenkins credential ID
+            }
+            steps {
+                sh """
+                    sonar-scanner \
+                      -Dsonar.projectKey=angular-devops \
+                      -Dsonar.projectName=angular-devops \
+                      -Dsonar.sources=src \
+                      -Dsonar.tests=src \
+                      -Dsonar.typescript.tsconfigPath=tsconfig.json \
+                      -Dsonar.exclusions=node_modules/** \
+                      -Dsonar.test.inclusions=**/*.spec.ts \
+                      -Dsonar.testExecutionReportPaths=test-reports/ut_report.xml \
+                      -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info \
+                      -Dsonar.host.url=${SONAR_HOST_URL} \
+                      -Dsonar.login=${SONAR_AUTH_TOKEN}
+                """
             }
         }
 
