Update sonar qube step in Jenkinsfile

--- a/CI/Jenkinsfile
+++ b/CI/Jenkinsfile
@@ -62,7 +62,7 @@ pipeline {
                       -Dsonar.testExecutionReportPaths=test-reports/ut_report.xml \
                       -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info \
                       -Dsonar.host.url=${SONAR_HOST_URL} \
-                      -Dsonar.login=${SONAR_AUTH_TOKEN}
+                      -Dsonar.login=${SONAR_TOKEN}
                 """
             }
         }
