Update docker compose to set fixed network name Remove jdk and maven from Jenkins dockerfile Update Jenkinsfile with final correct stages

--- a/CI/Dockerfile
+++ b/CI/Dockerfile
@@ -1,10 +1,7 @@
-FROM jenkins/jenkins:lts-jdk17
+FROM jenkins/jenkins:lts
 
 # Switch to root to install Maven and Docker
 USER root
-
-# Install Maven
-RUN apt-get update && apt-get install -y maven
 
 # Install Docker
 RUN apt-get update && \
