--- a/CI/Jenkinsfile
+++ b/CI/Jenkinsfile
@@ -55,6 +55,7 @@ pipeline {
                       -Dsonar.projectKey=angular-devops \
                       -Dsonar.projectName=angular-devops \
                       -Dsonar.sources=src \
+                      -Dsonar.exclusions=node_modules/** \
                       -Dsonar.typescript.tsconfigPath=tsconfig.json \
                       -Dsonar.host.url=${SONAR_HOST_URL} \
                       -Dsonar.login=${SONAR_TOKEN}
