--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,16 +18,32 @@ services:
   sonarqube:
     image: sonarqube:lts
     container_name: sonarqube
+    depends_on:
+      - db
+    environment:
+      SONAR_JDBC_URL: jdbc:postgresql://db:5432/sonarqube
+      SONAR_JDBC_USERNAME: sonar
+      SONAR_JDBC_PASSWORD: sonarpass
+      SONAR_ES_BOOTSTRAP_CHECKS_DISABLE: true
     ports:
       - "9000:9000" # SonarQube UI
-    environment:
-      - SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true
     volumes:
       - sonarqube_data:/opt/sonarqube/data
       - sonarqube_extensions:/opt/sonarqube/extensions
       - sonarqube_logs:/opt/sonarqube/logs
     networks:
       - devops
+
+  db:
+    image: postgres:16
+    container_name: sonarqube_postgres
+    environment:
+      POSTGRES_USER: sonar
+      POSTGRES_PASSWORD: sonarpass
+      POSTGRES_DB: sonarqube
+    volumes:
+      - postgresql_data:/var/lib/postgresql/data
+    restart: unless-stopped
 
   portainer:
     image: portainer/portainer-ce:lts
