--- a/CI/Jenkinsfile
+++ b/CI/Jenkinsfile
@@ -67,8 +67,8 @@ pipeline {
                 unstash 'angular-devops-dist'
                 script {
                     sh "pwd"
-                    env.COMMIT_SHA = sh(returnStdout: true, script: 'git rev-parse --short HEAD').trim()
-                    sh "docker build -t ${IMAGE_NAME}:${env.COMMIT_SHA} ."
+                    COMMIT_SHA = sh(returnStdout: true, script: 'git rev-parse --short HEAD').trim()
+                    sh "docker build -t ${IMAGE_NAME}:${COMMIT_SHA} ."
                 }
             }
         }
@@ -89,13 +89,13 @@ pipeline {
             }
             steps {
                 withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-                    sh '${env.COMMIT_SHA}'
+                    COMMIT_SHA = sh(returnStdout: true, script: 'git rev-parse --short HEAD').trim()
                     sh '''
                         git config user.email "ghandrisemh@gmail.com"
                         git config user.name "Ghandri Sameh"
-                        sed -i "s/tag: .*/tag: \"${env.COMMIT_SHA}\"/" helm/app/values.yaml
+                        sed -i "s/tag: .*/tag: \"${COMMIT_SHA}\"/" helm/app/values.yaml
                         git add helm/app/values.yaml
-                        git commit -m "Update deployment image to version ${env.COMMIT_SHA}"
+                        git commit -m "Update deployment image to version ${COMMIT_SHA}"
                         git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:master
                     '''
                 }
