--- a/helm/app/values.yaml
+++ b/helm/app/values.yaml
@@ -9,7 +9,7 @@ image:
   repository: angular-devops
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: VERSION_1.0.0
+  tag: "V1.0"
 
 appName: angular-devops-app
 
