--- a/CI-multi/Jenkinsfile
+++ b/CI-multi/Jenkinsfile
@@ -10,6 +10,12 @@ pipeline {
         SONARQUBE_ENV = 'SonarQube'
     }
     stages {
+        // --------------------------
+        stage('Checkout') {
+            steps {
+                checkout scm
+            }
+        }
         stage('Install Dependencies') {
             agent {
                 docker {
