--- a/CI-multi/Jenkinsfile
+++ b/CI-multi/Jenkinsfile
@@ -108,7 +108,7 @@ pipeline {
 
                         git add helm/app/values.yaml
                         git commit -m "Update deployment image to version ${COMMIT_SHA}" || echo "No changes to commit"
-                        git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME}.git HEAD:master
+                        git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME}.git HEAD:refs/heads/${env.BRANCH_NAME}
                     """
                 }
             }
