--- a/helm/app/values.yaml
+++ b/helm/app/values.yaml
@@ -9,7 +9,7 @@ image:
   repository: angular-devops
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "08dfc66"
+  tag: "PROD-e818db2"
 
 appName: angular-devops-app
 
