--- a/CI-multi/Jenkinsfile
+++ b/CI-multi/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
         IMAGE_TAG = 'latest'
         // SonarQube installation name (configure in Jenkins -> Manage Jenkins -> Configure System)
         SONARQUBE_ENV = 'SonarQube'
-        BUILD_ENV = 'PROD'
+        BUILD_ENV = 'DEV'
     }
     stages {
         // --------------------------
