Use Try/catch to handle inputs and aborts

--- a/CI-multi/Jenkinsfile
+++ b/CI-multi/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
         // --------------------------
         stage('Checkout') {
             steps {
-            // For multi-branch pipelines, use the following to checkout the current branch
+                // For multi-branch pipelines, use the following to checkout the current branch
                 checkout scm
             }
         }
@@ -30,7 +30,7 @@ pipeline {
             }
         }
         stage('Build & Test') {
-        // Use Docker agent for Node.js tasks
+            // Use Docker agent for Node.js tasks
             agent {
                 docker {
                     image 'node:20'
@@ -54,7 +54,6 @@ pipeline {
                 SONAR_HOST_URL = 'http://sonarqube:9000'  // change if needed
                 SONAR_TOKEN = credentials('sonarqube')  // Jenkins credential ID
             }
-
             // Only run SonarQube analysis on specific branches
             when {
                 anyOf {
@@ -64,24 +63,30 @@ pipeline {
                 }
             }
             steps {
-                // Ask for manual confirmation before scanning
-                input message: "Scan the project?", ok: "Scan now"
-                // Use try-catch to handle timeout or abort scenarios
-                catchError(buildResult: 'SUCCESS', stageResult: 'ABORTED') {
-                                timeout(time: 3, unit: 'MINUTES') {
-                                    input message: "Scan the project?", ok: "Scan now"
-                                }
-                                echo "🚀 Scanning the project"
-                                sh """
-                                sonar-scanner \
-                                      -Dsonar.projectKey=angular-devops \
-                                      -Dsonar.projectName=angular-devops \
-                                      -Dsonar.sources=src \
-                                      -Dsonar.exclusions=node_modules/** \
-                                      -Dsonar.typescript.tsconfigPath=tsconfig.json \
-                                      -Dsonar.host.url=${SONAR_HOST_URL} \
-                                      -Dsonar.login=${SONAR_TOKEN}
-                                      """
+                script {
+                    catchError(buildResult: 'SUCCESS', stageResult: 'ABORTED') {
+                        // Ask for manual confirmation before scanning
+                        def proceed = input(
+                            message: "Scan the project?",
+                            ok: "Scan now",
+                            parameters: [booleanParam(defaultValue: false, description: '', name: 'SCAN')]
+                        )
+                        if (proceed) {
+                            echo "🚀 Scanning the project"
+                            sh """
+                                        sonar-scanner \
+                                          -Dsonar.projectKey=angular-devops \
+                                          -Dsonar.projectName=angular-devops \
+                                          -Dsonar.sources=src \
+                                          -Dsonar.exclusions=node_modules/** \
+                                          -Dsonar.typescript.tsconfigPath=tsconfig.json \
+                                          -Dsonar.host.url=${SONAR_HOST_URL} \
+                                          -Dsonar.login=${SONAR_TOKEN}
+                                    """
+                        } else {
+                            echo "⏭️ Skipped Sonar Scan"
+                        }
+                    }
                 }
             }
         }
