--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,8 @@ services:
     volumes:
       - postgresql_data:/var/lib/postgresql/data
     restart: unless-stopped
+    networks:
+      - devops
 
   portainer:
     image: portainer/portainer-ce:lts
@@ -67,3 +69,4 @@ volumes:
   sonarqube_extensions:
   sonarqube_logs:
   portainer_data:
+  postgresql_data:
